--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planet Skin</title>
     <link href="./styles.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <main>
@@ -14,28 +15,30 @@
             </nav>
             <nav class="menu">
                 <ul class="navegacion">
-                    <li><a href="#">Cuidado Facial <img src="img/flecha.jpg" /></a></li>
-                    <li><a href="#">Tipo de piel<img src="img/flecha.jpg" /></a></li>
-                    <li><a href="#">Te preocupa<img src="img/flecha.jpg" /></a></li>
-                    <li><a href="#">Cuiadados corporales<img src="img/flecha.jpg" /></a></li>
-                    <li><a href="#">Maquillaje<img src="img/flecha.jpg" /></a></li>
-                    <li><a href="#">Outlet y promociones<img src="img/flecha.jpg" /></a></li>
-                    <li><a href="#">Novedades<img src="img/flecha.jpg" /></a></li>
-                    <li><a href="#">Marcas<img src="img/flecha.jpg" /></a></li>
+                    <li><a href="#">Cuidado Facial <span class="material-symbols-outlined">keyboard_arrow_down</span></a></li>
+                    <li><a href="#">Tipo de piel<span class="material-symbols-outlined">keyboard_arrow_down</span></a></li>
+                    <li><a href="#">Te preocupa<span class="material-symbols-outlined">keyboard_arrow_down</span></a></li>
+                    <li><a href="#">Cuiadados corporales<span class="material-symbols-outlined">keyboard_arrow_down</span></a></li>
+                    <li><a href="#">Maquillaje<span class="material-symbols-outlined">keyboard_arrow_down</span></a></li>
+                    <li><a href="#">Outlet y promociones<span class="material-symbols-outlined">keyboard_arrow_down</span></a></li>
+                    <li><a href="#">Novedades<span class="material-symbols-outlined">keyboard_arrow_down</span></a></li>
+                    <li><a href="#">Marcas<span class="material-symbols-outlined">keyboard_arrow_down</span></a></li>
                 </ul>
             </nav>
             <nav class ="derecha">
                 <ul class="navegacion">
-                    <li><a href=""><img src="img/login.jpg" /></a></li>
-                    <li><a href=""><img src="img/lupa.jpg" /></a></li>
-                    <li><a href=""><img src="img/carrito.jpg" /></a></li>
+                    <li><a href="#"><img src="img/login.jpg" /></a></li>
+                    <li><a href="#"><img src="img/lupa.jpg" /></a></li>
+                    <li><a href="#"><img src="img/carrito.jpg" /></a></li>
                 </ul>
 
             </nav>
         </header>
         <section class="central">
-            <p> protector solar</p>
+            <img src="img/fotoskin.jpg" class="fondo"/>
+            
         </section>
+        <div class="boton"><img src="img/botonPlanet.png" class="boton"/></div>
 
         
 
